--- a/Drill/Week-3.Rmd
+++ b/Drill/Week-3.Rmd
@@ -5,6 +5,9 @@ require(dplyr)
 require(ggplot2)
 require(tidyr)
 require(ScoreR)
+require(DCF)
+require(xtable)
+options( xtable.type="html", xtable.include.rownames=FALSE )
 startProblem("DCF-Assignment3")
 ```
 
@@ -14,347 +17,13 @@ startProblem("DCF-Assignment3")
 </style>
 
 
-## Week 3
+## Week 3 Drill
 
-EXERCISE:
-
-Find the location of 
-
-* the most northern and most southern city.  The city closest to 
-* the equator.
-
-END OF EXERCISE.
-
-### Make this Graphic
-
-But they need to do it with mScatter.  Mention that `geom_line()` can replace `geom_point()` and tell about `geom_hline(x=...)`.
-
-For instance, here is how to to look at how many babies named "Judy" or "Judith" were born in each year, arranged from the largest year to the smallest.
-
-```{r}
-BabyNames %>% 
-  filter( name %in% c("Judy", "Judith") ) %>%
-  arrange( count ) %>%
-  head( )
-```
-
-
-
-
-```{r}
-BabyNames %>% 
-  filter( name %in% c("Judy", "Judith") ) %>%
-  arrange( desc( count ) ) %>%
-  head( )
-```
-
-Keep in mind that arranging is useful mainly when you want to display the data table directly.  If you are doing graphics, the arrangement by the frame variables happens automatically.  For instance, here's a graph comparing the popularity of "Judy" and "Judith" over the years.
-
-```{r echo=FALSE}
-BabyNames %>% 
-  filter( name %in% c("Judy","Judith"), sex=="F") %>%
-  ggplot( aes(x=year,y=count)) + geom_line( aes(color=name)) + 
-  geom_vline( x=1934 ) + geom_vline(x=1939) + 
-  geom_vline(x=1969) + xlim(1920,2010)
-```
-
-The names Judy and Judith peaked in the 1940s and fell dramatically by 1970. This parallels the life of the famous singer Judy Garland.  Born Frances Gumm, and performing in her early years as part of the Gumm Sisters, she changed her name to Judy in 1934, became a celebrity in 1939 with the release of the movie "The Wizard of Oz," and died tragically in 1969.  These years are marked in the graphic.
-
-
-
-
-In the `CountryData`, find 
-
-* the fraction of the population that uses the Internet
-* the ratio of area to road length.  Also, the ratio of the  area to road length squared. 
-* scatterplot of health spending versus military spending
-* scatterplot of GDP per capita versus population density.
-
-Filter: Pick out the results for China, England, France, Germany, Russia 
-
-Join and filter: Pick out the results for the G20 countries.
-
-Join exercise: Give a set of synonyms for countries: two columns: standard and other.  Join the synonym set "other" with the source, read off the standard.
-
-### EXERCISE
-
-#### One
-
-SIMPLE, SIMPLE: `NA` is a fact of life.  Using `na.rm=TRUE` when the result of a computation is `NA`.  Explaining what `NA` means.  `is.na()`.
-
-#### Two
-
-SIMPLE, SIMPLE: levels of categorical variables, e.g. 'alive' versus 'Alive' in `NHANES`.
-
-
-
-
-#### Four
-
-Use `==` and `mean()` to find the proportion of cases at a given level, e.g. what fraction of smokers have died.  Here's an example of the syntax you'll need, using `sex` instead of `smoker`.
-```{r}
-data(NHANES, package="DCF") 
-NHANES %>% group_by( sex ) %>%  
-  summarise( living=mean( death=='alive', na.rm=TRUE ))
-```
-
-Add in: Look carefully at the quantity being given to `mean()`.  The variable name is `death`.  Since it's a variable name, there are no quotes around it.  The `==` tests of equality.  The quoted string, `"alive"`, is one of the levels of the categorical variable `death`.  Altogether, `mean( death=="alive" )` means "the proportion of cases still alive."^[Admittedly, it's a bit odd to have a variable named `death` that can have a value `"alive"`. In the NHANES data, `death` indicates whether or not the person died, and whether the death (if any) was from cardiovascular causes.]
-
-
-Then break down by smoker, etc. as the exercise.  Don't show them this, but ask them to draw conclusions: which group is more likely to be alive.
-
-```{r}
-NHANES %>% group_by(smoker) %>% 
-  summarise( count=n(), 
-             living=mean(death=="alive", na.rm=TRUE) )
-NHANES %>% group_by(sex, smoker) %>%
-  summarise( living=mean(death=="alive", na.rm=TRUE) )
-```
-
-Then, ask them to break it down by people over 60 and people under 60.
-
-```{r}
-NHANES %>% group_by(age<=60,sex, smoker) %>%
-  summarise( living=mean(death=="alive", na.rm=TRUE) )
-```
-
-Among the young males, which group is more likely to be alive: smokers or non-smokers.  How about among older males?  Young females? Older females?
-
-Explain something about Simpson's paradox.
-
-Another EXERCISE ...
-
-Make a stacked bar chart of proportions for each of the smoking, sex, age groups.  Use this to illustrate the different kinds of plots.
-
-Another EXERCISE ...
-
-Using `ntile()` to convert quantitative to categorical.  List some of the other converters, e.g., `cut()`.
-
-### END OF EXERCISE
-
-## EXERCISES:
-
-
-### One
-
-What does this do?
-```{r results='hide'}
-NHANES %>% 
-  group_by( sex, smoker ) %>%
-  summarise( n=n() )
-```
-
-### Two
-
-
-Maybe in this section, mean weight for diabetic and not.
-
-```{r}
-foo <- group_by(NHANES, sex, diabetic) %>% 
-  summarise(wt=mean(weight,na.rm=TRUE),n=n(),
-            se=sd(weight, na.rm=TRUE)/sqrt(n)) 
-ggplot(foo, aes(x=sex, group=diabetic,y=wt,width=.5))  + geom_bar(alpha=.5,position='dodge',stat='identity',aes(fill=diabetic)) + geom_errorbar(aes(ymax=wt+2*se,ymin=wt-2*se,),position='dodge')  + ylim(0,80) + guides(fill=FALSE)
-```
-
-For errorbars and such, you need to use `position=position_dodge(width=.5)` to separate the groups equally.
-
-```{r}
-ggplot(foo, aes(group=sex, x=diabetic, y=wt,width=.5))  + 
-#  geom_bar(alpha=.3,aes(fill=sex),position='dodge',stat='identity') + 
-  geom_errorbar(aes(ymax=wt+2*se,ymin=wt-2*se,color=sex),
-                position=position_dodge(width=0.3),weight=3,size=2,width=.2)  + 
-  ylim(0,80) + ylab("Weight") + 
-  xlab("Diabetes status")
-```
-
-
-QUESTIONS TO ASK:
-* What variables are here?
-* What cases are here in the glyph-ready data?
-* Which variable is represented by color?
-* Which variable sets th position of the subgroup w.r.t. the overall group?
-* The length of the error bars reflects a quantity called the "standard error".  
-
-Make graphs to compare diabetics to non-diabetics in each group, and to compare males to females in each group.
-
-Perhaps jazz it up with age-group.
-
-## What fraction are diabetic in the various age groups
-
-```{r eval=FALSE}
-mutate(NHANES, AgeGroup=ntils(age,n=10,format='left')) %>% 
-  group_by(sex,AgeGroup) %>%
-  summarize(dfrac=mean(diabetic=='diabetic',na.rm=TRUE),
-            se=sqrt(dfrac*(1-dfrac)/length(diabetic)) )-> hoo
-ggplot(hoo, aes(x=AgeGroup,y=dfrac,group=sex)) + geom_bar(alpha=.3,aes(fill=sex,color=sex),position='dodge',stat='identity',width=4) + geom_errorbar(aes(ymax=dfrac+se,ymin=dfrac-se,color=sex),position='dodge')
-```
-
-### Proportion with summarize:
-
-The point here is that once you've reduced the data to a tally of each group, you want to keep those cases, so you want a mutate().  But even in `mutate()`, aggregation operators work over the whole group.
-
-The last grouping variable gets eliminated each time you use `mutate()` or `summarize()`.
-
-```{r}
-group_by(NHANES, sex, smoker, diabetic) %>% tally() -> tmp
-# get rid of the NA here
-filter(tmp, diabetic != 'NA' & smoker != 'NA') %>%
-mutate( total=sum(n),frac=n/total) %>% filter( diabetic=='diabetic')
-```
-
-## Create a proportion function
-
-Do I want this?
-
-```{r}
-simple <- function(v) {
-  sum(v,na.rm=TRUE)/length(v)
-}
-proportion <- function(.data,...) {
-  do(.data,data.frame(prop.table(do.call(table,select(.,...)))))
-}
-# example
-# group_by(NHANES,sex,smoker) %>% proportion(diabetic)
-```
-
-## TO DO
-
-* Fix NHANES to turn `NaN` into `NA` in the numerical variables.
-* Set the option `"na.rm"` to `TRUE` when the DCF package is loaded.
-* Have earlier examples with `summary()` of a single variable:
-```
-with( NHANES, summary(height) )
-```
-That will let you show what the variables look like.  Or maybe show a boxplot.
-
-## Returned values, arguments, inputs and outputs
-
-Explain what these are.
-
-Also, assignment.  Use `<-` to distinquish between assignment and named arguments.   `<-` gives the output of a function to a name, or, in other words, "assigns a value to an object named ..."
-
-
-For each sex and smoker group, what fraction has diabetes?
-```{r eval=FALSE}
-group_by(NHANES,sex,smoker) %>% mutate(count=n()) -> tmp
-summarize(tmp, sum(diabetic=='diabetic')/count )
-dcast(group_by(NHANES,sex,smoker) %>% proportion(diabetic),
-      ~diabetic,value.var='Freq')
-tmp <- group_by(NHANES,sex) %>% summarize( k=sum(diabetic=='diabetic') )
-ggplot(tmp, aes(x=sex,y=n,fill=smoker)) + 
-  geom_bar(stat='identity',position='fill')
-```
-
-
-### NOTE: For proportion ...
-
-```{r}
-group_by(NHANES, sex,smoker) %>% summarise(pd=mean(diabetic=='diabetic',na.rm=TRUE),sz=n(),se=sqrt(pd*(1-pd)/sqrt(sz)))
-```
-
-
-## How Many?
-
-n() and groupwise n().  n() takes no arguments because it wouldn't matter which variable you used: they all have the same length
-
-
-QUESTION:  Why are these two quantities so different?
-```{r}
-summarise( NHANES, 
-           mean( height, na.rm=TRUE ), 
-           mean( hgtDiff, na.rm=TRUE ) )
-```
-
-## Grouping
-
-Often, you will be interested in studying **groups** of cases, for instance the males and females in `NHANES` or the smoking diabetics versus non-smoking diabetics. 
-
-In order to do the grouping, you need one or more variables that specify the groups, for instance, `sex`, `diabetic`, and `smoker` in NHANES.  Use the `group_by()` function to specify which variables you want to use.
-
-Grouping cases doesn't in itself do anything.  Instead, grouping sets things up so that `summarize()`, `mutate()`, and some other functions can do things on a group-by-group basis.  Example:
-
-```{r}
-NHANES <- group_by( NHANES, sex )
-summarise( NHANES, typicalAge=median(age, na.rm=TRUE) )
-```
-
-Doing a transform on a grouped variable allows you, if you want, to use aggregate quantities for that group.  For instance, the groups of males and females have different mean heights.  Here's how you would calculate the difference of an individual from his or her group's mean.
-
-```{r}
-NHANES <- group_by( NHANES, sex )
-NHANES <- mutate( NHANES, dheight=height-mean(height) )
-summarise( NHANES, sd(dheight) )
-```
-
-
-
-
-
-
-## Style
-
-As mentioned before, re-using a name can make your commands easier to read.
-
-Reassignment of the output to the input data frame may make sense for a transform.  But it is generally a bad idea for an aggregation.  (Explain why.  Hint: What are the cases in the input and output.) [Show a reassignment in a summarize() and say DON'T DO THIS!]
-
-### Pipes
-
-
-## Example: Blood pressure and diabetes
-
-The NHANES data gives ... for 31000 people.  Suppose you are interested in the question, does waist to height ratio differ between diabetics and non-diabetics.
-
-
-```{r}
-group_by(NHANES, sex, diabetic) %>% 
-  summarise(myIndex=mean(waist/height,na.rm=TRUE),n=n(),
-            se=sd(waist/height, na.rm=TRUE)/sqrt(n)) -> foo 
-ggplot(foo, aes(x=sex, group=diabetic, color=diabetic,y=myIndex,width=.5))  + geom_bar(alpha=.3,aes(fill=diabetic),position='dodge',stat='identity') + geom_errorbar(aes(ymax=myIndex+2*se,ymin=myIndex-2*se,),position='dodge',weight=3,size=2)  + ylim(0,80)
-```
-
-Perhaps a better plot would be:
-
-```{r eval=FALSE}
-ggplot(NHANES, aes(x=sex, y=myIndex, fill=diabetic)) + geom_boxplot(notch=TRUE)
-```
-
-NB.  For some reason, geom_box() doesn't use group.  But color works.
-
-
-MAYBE ALWAYS DO A SELECT to highlight the variables being used.
-
-## Exercises
-
-What could you improve about this graphic if your point is to show that pulse pressure differs from diabetics and non-diabetics?  Hint: Missing data is shown in gray, even though it isn't in the legend.
-
-```{r}
-group_by(NHANES, sex, diabetic) %>% 
-  summarise(mn=mean(myIndex,na.rm=TRUE),n=n(),
-                                              se=sd(myIndex, na.rm=TRUE)/sqrt(n)) -> foo 
-ggplot(foo, aes(group=sex, x=diabetic, y=mn,width=.5))  + geom_bar(alpha=.3,aes(fill=sex),position='dodge',stat='identity') + geom_errorbar(aes(ymax=mn+2*se,ymin=mn-2*se,),position='dodge',weight=3,size=2)  + ylim(0,80) + ylab("Waist to Height Ratio (cm/m)") + 
-  xlab("Diabetes status")
-```
-
-
-
-ANS: Group by diabetes status rather than sex.  Kill the NAs.
-
-Add a new variable to `small` that gives the mean height for that person's group.
-
-See [this set of exercises](http://www.public.iastate.edu/~hofmann/stat480/homework/dplyr%20drills.html)
-
-## Still to do
-
-Do a tabulation of the rank-choice data.
-
-Find the variances of the NCI data, by probe.
-
-Cross-tab of NHANES: perhaps cardiac death versus sex or BMI. 
-
-
-### Quiz
+### Don't Peek!
 
 Here are the first letters of the names of several data verbs. (Repeated letters are for different verbs.) Complete the name and say briefly what the verb does.
+
+Rather than looking at a list of verbs, do this just from memory.  
 
 * A
 * G
@@ -364,205 +33,154 @@ Here are the first letters of the names of several data verbs. (Repeated letters
 * S
 * S
 
-Here are two data tables.  The left is the input to a data verb, the right is the output.  Identify the operation and write down the details of the operation.
-
-Example:  Do select ...
 
 
+## Data verbs and their uses
 
+Each of these tasks can be performed using a single data verb.  For each task, say which verb it is:
 
+* Find the average of one of the variables.
 
-## MORE DATA POSSIBILITIES
+<aside class="answer">
+`summarise()`
+</aside>
 
-Move these to the resources file when you have a chance.
+* Add a new column that is the ratio between two variables.
 
+<aside class="answer">
+`mutate()`
+</aside>
 
-Storm damage database: http://rpubs.com/deflath/20484
+* Sort the cases in descending order of a variable.
 
-US Housing database: http://www.asdfree.com/2014/06/analyze-american-housing-survey-ahs.html
+<aside class="answer">
+`arrange()`
+</aside>
 
-### Multiple Choice
+* Create a new data table that includes only those cases that meet a criterion.
 
-There are three (simple) steps to creating a multiple-choice problem in *ScoreR*:
+<aside class="answer">
+`filter()`
+</aside>
 
-1. Initialization of the question
-2. Creation of the individual items, typically embedded in *markdown* statements
-3. Termination of the question.
+* From a data table with three categorical variables A, B, & C, and a quantitative variable X, produce an output that has a separate case for each of the combinations of the levels of A and B.  (Hint: It might be easier to see the answer if the problem statement added, "and gives the maximum value of X over all the cases that have a given combination of A and B." )
 
-Initialization is done with the `newMC()` function.
+<aside class="answer">
+`filter()`
+</aside>
 
-```{r}
-f = newMC(totalPts=5,name="minus1") # Ordinarily, make this silent
+* From a data table with three categorical variables A, B, & C, and a quantitative variable X, produce an output that has the same cases but only the variables A and X.
+
+## Two steps
+
+These questions refer to the `diamonds` data table.  Take a look at the codebook (using `help()`) so that you'll understand the meaning of the tasks.^[Motivated by [this problem set](http://www.public.iastate.edu/~hofmann/stat480/homework/dplyr%20drills.html) based on drills by Garrett Grolemund which are licensed under the [CC Attribution-Noncommercial-Share Alike 3.0 License](http://creativecommons.org/licenses/by-nc-sa/3.0/us/).]
+
+Each of the following tasks can be accomplished by a statement of the form
+```{r eval=FALSE}
+diamonds %>% 
+  verb1( args1 ) %>% 
+  verb2( args2 ) %>% 
+  arrange( args3 ) %>% head( 1 )
 ```
 
-The function name, in this case `f`, is arbitrary.  You will use that name to create the individual items with statements like `I(f(TRUE))` and I(f(FALSE))`, which will be embedded in text.  For instance:
+Identify the verbs and arguments.
 
-Which of these is equal to $-1$?  
-`r I(f(FALSE))` The value of $a x^2 + b x - c$ for all $a$, $b$, and $c$  
-`r I(f(TRUE))`  $e^{i\pi}$  
-`r I(f(FALSE))` $\ln(0)$  
-`r I(f(FALSE))` There's no such thing as a negative number, just a negative attitude.
-`r I(f(finish=TRUE))`
-
-After the items have been defined, terminate the question by calling the function with the argument `finish=TRUE`
-```{r eval=FALSE} 
-I(f(finish=TRUE))
-```
-You may well want to use inline knitr notation --- that's up to you.
-
-### Select from a set
-
-What's the value of $\pi$?
-```{r}
-piQuestion3 = selectSet(name="piValue3",totalPts=4,
-                        "2.71727"=FALSE,
-                        "3.0"=FALSE,
-                        "3.14159"=TRUE,
-                        "6.28318"=FALSE)
-```
-
-* Let's try that again ... `r I(piQuestion3)`
-
-
-### Free Text
-
-The `freeText()` function in `ScoreR` implements free-text entry.  It's very, very simple to add a free-text question to a problem.  Just
-
-`r I(textItem(name="question-topic",rows=2,totalPts=10))`
-
-The name, of course, should be unique within the problem.  The optional arguments `rows` and `cols` sets the size of the text entry box.  On many browsers, this block can be resized by the user, so a small box is useful in for adding in extended text.
+1. Which color diamonds seem to be largest on average (in terms of carats)?
+    * verb1: 
+    * verb2:
+    * args1:
+    * args2:
+    * args3:
+#. Which clarity of diamonds has the largest average "table" per carat?
+    * verb1: 
+    * verb2:
+    * args1:
+    * args2:
+    * args3:
+#. What color of diamonds occurs the most frequently among diamonds with ideal cuts? 
+    * verb1: 
+    * verb2:
+    * args1:
+    * args2:
+    * args3:
+#. What is the average price per carat of diamonds that cost more than $10000?
+    * verb1: 
+    * verb2:
+    * args1:
+    * args2:
+    * args3:
+#. Create a new data set that groups diamonds by color and displays the average depth and average table for each group. 
+    * verb1: 
+    * verb2:
+    * args1:
+    * args2:
+    * args3:
+    
 
 
-### Second Part
 
-A perennial problem when writing scientific reports is figuring out
-how many significant digits to report.  It's naïve to 
-copy all the digits from one's calculator or computer
-output; the data generally do not justify such
-precision. 
+## Tables
 
-Once you have a confidence interval, however, you do not need to guess
-how many significant digits are appropriate.  The standard error
-provides good guidance.  Here is a rule of thumb: keep two significant
-digits of the margin of error and round the point estimate to the same
-precision.  
-
-For example, suppose you have a confidence interval of $1.7862 \pm
-0.3624$ with 95% confidence.  Keeping the first two significant
-digits of the margin of error gives $0.36$.  We'll keep the point
-estimate to the same number of digits, giving altogether $1.79 \pm
-0.36$.
-
-Another example: suppose the confidence interval is $6548.23 \pm
-1321$.  Keeping the first two digits of the margin of error gives
-$1300$, with a corresponding margin of error of $6500 \pm 1300$.
-
-* Suppose the computer output is $0.03234232 \pm 0.01837232$.
-
-```{r include=FALSE}
-f=newMC(totalPts=1, name="confidence.interval")
-```
-Using this rule of thumb, what should you report in as the
-confidence interval?      
-`r I(f(FALSE))` $0.3234 \pm 0.01837$     
-`r I(f(FALSE))` $0.3234 \pm 0.0183$     
-`r I(f(FALSE))` $0.0323 \pm 0.0184$    
-`r I(f(FALSE))` $0.0323 \pm 0.018$     
-`r I(f(TRUE))` $0.032 \pm 0.018$     
-`r I(f(FALSE))` $0.032 \pm 0.01$     
-`r I(f(FALSE))` $0.03 \pm 0.01$   
-`r I(f(finish=TRUE))`
-
-
-* Now suppose the computer output were $99.63742573 \pm 1.48924367$.
-
-```{r include=FALSE}
-g=newMC(totalPts=1, name="confidence.interval.2")
-```
-What should you report as the confidence interval?     
-`r I(g(FALSE))` $100 \pm 1$     
-`r I(g(FALSE))` $99 \pm 1.5$     
-`r I(g(TRUE))` $99.6 \pm 1.5$     
-`r I(g(FALSE))` $99.64 \pm 1.49$     
-`r I(g(FALSE))` $99.647 \pm 1.489$ 
-`r I(g(finish=TRUE))`
-
-`r I(endProblem())`
-
-
-* Filter --- Find those cases in the left table that have a match in the right. [Give back just those countries in the G8]
-
-* Translate --- Translate a value from the left table according to a specification in the right table.  [List of synonyms for countries and an official identifier.  Translate the synonmyms into the official identifier.]
-[Marking candidates as "minor" in Minneapolis Mayor]
-
-
-#### Left Join
-
-Merge with all.x=TRUE.
-
-A *left join* includes the results of the inner join along with all the non-matching cases from the left table.  For the non-matching cases, the value of the variable from the right table is "missing" data.
+Here is a small data table based on `BabyNames`.  Take this table as the input.  
 
 ```{r echo=FALSE,results='asis'}
-xtable( left_join( LL, RR ) )
-```
-
-  As an example, consider the following table (which is a small part of the `CountryData` table).
-
-```{r echo=FALSE}
-CountryLeft <- CountryData[c( 48, 70, 89, 109, 110, 174, 183, 221, 242, 248), 1:3]
-row.names(CountryLeft) <- NULL
-```
-
-```{r echo=FALSE,results='asis',scroller=300}
-xtable( CountryLeft )
-```
-
-An left join can attach the information from the `CountryGroups` table to the geographic/demographic data. 
-
-```{r echo=FALSE, results='hide'}
-left_join( CountryLeft, CountryGroups )
+set.seed( 101 )
+Small <- sample_n( BabyNames, size=10 )
+row.names( Small ) <- NULL
+Small %>% xtable
 ```
 
 
+For each of the following outputs, identify the operation and write down the details of the operation.
 
+* Output Table 1
 
-Join: minor candidates
-
-Join: 
-
-* select out the G20 countries
-* add a variable indicating whether a country is in the G20 --- make a map
-
-
-Mutate, Filter & Select, Arrange?  save Join for later.
-
-Example with Mutate: Calculation the proportion of smokers who are alive adjusted for sex and age.  You'll need `mutate()` to add the proportion variable on.
-
-
-
-There are many international groups to which countries may belong.  Some famous ones are the G8 and G20 industrialized economies.  Here's part of the `CountryGroups` table that identifies the membership for three different international groups.
-
-```{r echo=FALSE,results='asis',scroller=300}
-set.seed(129)
-CountryGroups %>% xtable()
+```{r echo=FALSE,results='asis'}
+arrange( Small, sex, count ) %>% xtable
 ```
 
-```{r eval=FALSE}
-merge(CountryLeft, CountryGroups)
-```
-```{r echo=FALSE,results='asis',scroller=300 }
-merge(CountryLeft, CountryGroups) %>% xtable
-```
-```{r eval=FALSE}
-merge(CountryLeft, CountryGroups, all.x=TRUE)
+* Output Table 2
+
+```{r echo=FALSE,results='asis'}
+filter( Small, sex=="F" ) %>% xtable
 ```
 
-```{r echo=FALSE,results='asis',scroller=300}
-merge(CountryLeft, CountryGroups, all.x=TRUE) %>% xtable
+* Output Table 3
+
+```{r echo=FALSE,results='asis'}
+filter( Small, sex=="M", count > 10 ) %>% xtable
 ```
 
-[List of synonyms for countries and an official identifier.  Translate the synonmyms into the official identifier.]
+* Output Table 4
 
-
-```{r child="../../CSS/DisqusTemplate.Rmd"}
+```{r echo=FALSE,results='asis'}
+summarize( Small, total=sum(count) ) %>% xtable
 ```
+
+* Output Table 5
+
+```{r echo=FALSE,results='asis'}
+select( Small, name, count ) %>% xtable
+```
+
+
+
+
+
+
+
+### Changing Cases
+
+There's only one data verb that takes a single data table as input and produce an output that (in general) has a different meaning to the case.  Which one?
+
+<aside class="answer">
+`summarise()`
+</aside>
+
+There's only one data verb that takes two data tables as input rather than just a single data table.  Which one?
+
+<aside class="answer">
+`join()`
+</aside>
+
+
