--- a/Drill/Week-4.Rmd
+++ b/Drill/Week-4.Rmd
@@ -541,5 +541,5 @@ What should you report as the confidence interval?
 
 `r I(endProblem())`
 
-```{r child="../../CSS/DisqusTemplate.Rmd"}
+```{r child="../CSS/DisqusTemplate.Rmd"}
 ```
